--- a/JS-fondamentaux/Prototype/ajouter-livre.html
+++ b/JS-fondamentaux/Prototype/ajouter-livre.html
@@ -13,7 +13,7 @@
 <body>
 
   <h1>Ajouter un livre</h1>
-  <a href="catalogue.html">📚 Retour au catalogue</a>
+  <a href="catalogue.html">Retour au catalogue</a>
 
   <form onsubmit="ajouterLivre(event)">
     <input type="number" id="code" placeholder="Code" required>
